--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "devDependencies": {
     "@playwright/test": "^1.42.1",
     "@types/node": "^20.11.25"
+  },
+  "dependencies": {
+    "npm": "^10.5.0"
   }
 }
